fix(code-block): overflow code should be scrolled into view

--- a/src/css/code-block.css
+++ b/src/css/code-block.css
@@ -28,6 +28,7 @@ lake-box[name="codeBlock"] {
   margin-bottom: 8px;
 }
 .lake-code-block {
+  box-sizing: border-box;
   border: 1px solid var(--border-color);
 }
 lake-box[name="codeBlock"] .lake-box-selected .lake-code-block {
